--- a/index.html
+++ b/index.html
@@ -8,29 +8,52 @@
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#059669">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Noto+Serif+SC:wght@700&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Inter', 'PingFang SC', sans-serif; }
-        .emerald-glass {
-            background: rgba(255, 255, 255, 0.8);
-            backdrop-filter: blur(12px);
-            border: 1px solid rgba(16, 185, 129, 0.1);
+        :root {
+            --emerald-600: #059669;
         }
-        .animate-in {
-            animation: fadeIn 0.4s ease-out;
+        body { 
+            font-family: 'Inter', 'PingFang SC', sans-serif; 
+            background-color: #f8fafc;
         }
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(10px); }
-            to { opacity: 1; transform: translateY(0); }
+        .serif-title { font-family: 'Noto Serif SC', serif; }
+        
+        /* Bird Silhouette Background */
+        .bird-bg {
+            position: fixed;
+            bottom: -50px;
+            right: -50px;
+            width: 400px;
+            height: 400px;
+            opacity: 0.03;
+            pointer-events: none;
+            z-index: 0;
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cpath d='M512 232v7.9c0 14.3-10.4 26.6-24.5 28.7-36.4 5.5-74 1.3-108.3-12.1-23.3-9.1-48.4-13.8-73.8-13.8-16.4 0-32.8 2-48.6 6l-50.5 12.6c-13.5 3.4-27.4-4.8-30.8-18.3-3.4-13.5 4.8-27.4 18.3-30.8l50.5-12.6c13.7-3.4 28-5.2 42.4-5.2 21.3 0 42.4 3.9 62.1 11.6 28.3 11.1 59.3 14.5 89.4 10l5.8-.9c21.8-3.3 41.3-16.7 53.3-36.1l6.1-9.8c6.6-10.6 20.4-13.9 31-7.3s13.9 20.4 7.3 31l-6.1 9.8c-17.7 28.5-46.1 48-78.2 52.8l-5.8.9c-24.5 3.7-49.8.9-72.9-8.1-15.1-5.9-31.1-8.9-47.3-8.9-10.8 0-21.5 1.3-32 3.9l-50.5 12.6c-4.5 1.1-7.2 5.7-6.1 10.2s5.7 7.2 10.2 6.1l50.5-12.6c11.9-3 24.2-4.5 36.5-4.5 18.5 0 36.8 3.4 54.1 10.2 39.5 15.5 83 20.3 125.2 13.9 22.8-3.5 43.8-25.1 43.8-48.4v-7.9z'/%3E%3C/svg%3E");
+            background-repeat: no-repeat;
         }
-        .recording-pulse {
-            animation: pulse 1.5s infinite;
+
+        .glass-card {
+            background: rgba(255, 255, 255, 0.7);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.07);
         }
-        @keyframes pulse {
-            0% { transform: scale(1); opacity: 1; }
-            50% { transform: scale(1.2); opacity: 0.5; }
-            100% { transform: scale(1); opacity: 1; }
+
+        .animate-float {
+            animation: float 6s ease-in-out infinite;
         }
+        @keyframes float {
+            0% { transform: translateY(0px); }
+            50% { transform: translateY(-10px); }
+            100% { transform: translateY(0px); }
+        }
+
+        /* Custom Scrollbar */
+        ::-webkit-scrollbar { width: 6px; }
+        ::-webkit-scrollbar-track { background: #f1f5f9; }
+        ::-webkit-scrollbar-thumb { background: #cbd5e1; border-radius: 10px; }
+        ::-webkit-scrollbar-thumb:hover { background: #94a3b8; }
     </style>
 <script type="importmap">
 {
@@ -46,7 +69,7 @@
 </script>
 </head>
 <body class="bg-slate-50 text-slate-900">
+    <div class="bird-bg"></div>
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
