--- a/index.html
+++ b/index.html
@@ -71,5 +71,6 @@
 <body class="bg-slate-50 text-slate-900">
     <div class="bird-bg"></div>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
