--- a/index.html
+++ b/index.html
@@ -71,6 +71,16 @@
 <body class="bg-slate-50 text-slate-900">
     <div class="bird-bg"></div>
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script>
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('./sw.js').then(reg => {
+                    console.log('SW registered:', reg);
+                }).catch(err => {
+                    console.log('SW registration failed:', err);
+                });
+            });
+        }
+    </script>
 </body>
 </html>
