--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         }
         .serif-title { font-family: 'Noto Serif SC', serif; }
         
-        /* Bird Silhouette Background */
         .bird-bg {
             position: fixed;
             bottom: -50px;
@@ -49,7 +48,6 @@
             100% { transform: translateY(0px); }
         }
 
-        /* Custom Scrollbar */
         ::-webkit-scrollbar { width: 6px; }
         ::-webkit-scrollbar-track { background: #f1f5f9; }
         ::-webkit-scrollbar-thumb { background: #cbd5e1; border-radius: 10px; }
@@ -71,14 +69,15 @@
 <body class="bg-slate-50 text-slate-900">
     <div class="bird-bg"></div>
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
     <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
-                navigator.serviceWorker.register('./sw.js').then(reg => {
-                    console.log('SW registered:', reg);
+                navigator.serviceWorker.register('./sw.js', { scope: './' }).then(reg => {
+                    console.log('SW registered:', reg.scope);
+                    // 强制检查更新
+                    reg.update();
                 }).catch(err => {
-                    console.log('SW registration failed:', err);
+                    console.error('SW registration failed:', err);
                 });
             });
         }
