--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 <body class="bg-slate-50 text-slate-900">
     <div class="bird-bg"></div>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
     <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
