--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
             box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.07);
         }
 
-        .animate-float {
-            animation: float 6s ease-in-out infinite;
+        @keyframes bounce-in {
+            0% { transform: translate(-50%, -100%); opacity: 0; }
+            70% { transform: translate(-50%, 15px); opacity: 1; }
+            100% { transform: translate(-50%, 0); opacity: 1; }
         }
-        @keyframes float {
-            0% { transform: translateY(0px); }
-            50% { transform: translateY(-10px); }
-            100% { transform: translateY(0px); }
+        .animate-bounce-in {
+            animation: bounce-in 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
         }
 
         ::-webkit-scrollbar { width: 6px; }
@@ -69,19 +69,5 @@
 <body class="bg-slate-50 text-slate-900">
     <div class="bird-bg"></div>
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
-    <script>
-        if ('serviceWorker' in navigator) {
-            window.addEventListener('load', () => {
-                navigator.serviceWorker.register('./sw.js', { scope: './' }).then(reg => {
-                    console.log('SW registered:', reg.scope);
-                    // 强制检查更新
-                    reg.update();
-                }).catch(err => {
-                    console.error('SW registration failed:', err);
-                });
-            });
-        }
-    </script>
 </body>
 </html>
